Move black and white to the Color module

--- a/docs/Color/Scheme/X11.md
+++ b/docs/Color/Scheme/X11.md
@@ -1,7 +1,8 @@
 ## Module Color.Scheme.X11
 
-X11 colors as specified by the CSS3 specification.
-https://www.w3.org/TR/css3-color/#svg-color
+X11 colors as specified by the CSS3 specification (except black and
+white).
+See: https://www.w3.org/TR/css3-color/#svg-color
 
 #### `aliceblue`
 
@@ -43,12 +44,6 @@ beige :: Color
 
 ``` purescript
 bisque :: Color
-```
-
-#### `black`
-
-``` purescript
-black :: Color
 ```
 
 #### `blanchedalmond`
@@ -859,12 +854,6 @@ violet :: Color
 
 ``` purescript
 wheat :: Color
-```
-
-#### `white`
-
-``` purescript
-white :: Color
 ```
 
 #### `whitesmoke`
